--- a/app/kitchen/webapp/index.html
+++ b/app/kitchen/webapp/index.html
@@ -15,7 +15,7 @@
         src="https://sapui5.hana.ondemand.com/1.124.0/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
-            "com.sumanth.nnrg.kitchen": "./"
+            "com.spandana.nnrg.kitchen": "./"
         }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="com.sumanth.nnrg.kitchen"
+        data-name="com.spandana.nnrg.kitchen"
         data-id="container"
-        data-settings='{"id" : "com.sumanth.nnrg.kitchen"}'
+        data-settings='{"id" : "com.spandana.nnrg.kitchen"}'
         data-handle-validation="true"
     ></div>
 </body>
