--- a/app/product/webapp/test/flpSandbox.html
+++ b/app/product/webapp/test/flpSandbox.html
@@ -43,10 +43,10 @@
                 }
             },
             applications: {
-                "comspandanannrgkitchen-tile": {
-                    title: "kitchen details",
+                "comspandanannrgproduct-tile": {
+                    title: "product",
                     description: "An SAP Fiori application.",
-                    additionalInformation: "SAPUI5.Component=com.spandana.nnrg.kitchen",
+                    additionalInformation: "SAPUI5.Component=com.spandana.nnrg.product",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -54,17 +54,17 @@
         };
     </script>
 
-    <script src="https://sapui5.hana.ondemand.com/1.124.0/test-resources/sap/ushell/bootstrap/sandbox.js" id="sap-ushell-bootstrap"></script>
+    <script src="https://sapui5.hana.ondemand.com/1.125.1/test-resources/sap/ushell/bootstrap/sandbox.js" id="sap-ushell-bootstrap"></script>
     <!-- Bootstrap the UI5 core library -->
     <script id="sap-ui-bootstrap"
-        src="https://sapui5.hana.ondemand.com/1.124.0/resources/sap-ui-core.js"
+        src="https://sapui5.hana.ondemand.com/1.125.1/resources/sap-ui-core.js"
         data-sap-ui-libs=""
         data-sap-ui-async="true"
         data-sap-ui-preload="async"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"com.spandana.nnrg.kitchen": "../"}'
+        data-sap-ui-resourceroots='{"com.spandana.nnrg.product": "../"}'
         data-sap-ui-frameOptions="allow"> // NON-SECURE setting for testing environment
     </script>
 
