--- a/app/product/webapp/test/integration/opaTests.qunit.html
+++ b/app/product/webapp/test/integration/opaTests.qunit.html
@@ -8,7 +8,7 @@
             src="/resources/sap-ui-core.js"
             data-sap-ui-theme='sap_fiori_3'
             data-sap-ui-resourceroots='{
-                "com.spandana.nnrg.kitchen": "../../"
+                "com.spandana.nnrg.product": "../../"
             }'
             data-sap-ui-animation="false"
             data-sap-ui-compatVersion="edge"
